[project]
name = "streamlit-private-prototyping"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.20",
    "langchain-community>=0.3.19",
    "numpy>=2.2.3",
    "sentence-transformers>=3.4.1",
    "streamlit-cookies-controller>=0.0.4",
    "streamlit-local-storage>=0.0.25",
    "streamlit>=1.43.0",
    "unstructured>=0.14.8",
    "pdfminer>=20191125",
    "langchain-unstructured>=0.1.6",
    "unstructured-client>=0.31.1",
    "cryptography>=44.0.2",
    "faiss-cpu>=1.10.0",
    "requests>=2.32.3",
    "langchain-groq>=0.2.5",
]
